Convert instructions to a vcb blueprint string

--- a/src/default_config.json
+++ b/src/default_config.json
@@ -2,6 +2,7 @@
     "opcodes": 1,
     "opcode_bit_length": 5,
     "counter_bit_length": 4,
+    "counter_starting_number": 4,
     "microcodes": {
 
     }
