opcode parsing changes
- each opcode is now named and assigned a length
- opcode's value is prefixed by it's name and '=' sign ([opcode_name]=[opcode_value])

--- a/src/default_config.json
+++ b/src/default_config.json
@@ -1,6 +1,7 @@
 {
-    "opcodes": 1,
-    "opcode_bit_length": 5,
+    "opcodes": [
+        {"name": "OPCODE", "length": 6}
+    ],
     "counter_bit_length": 4,
     "flags_bit_length": 4,
     "microcodes": {
